// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a MultiMediaSelection field 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="mediaItem"
      >
        <img
          alt="Media 1"
          class="thumbnailImage"
          src="http://lorempixel.com/25/25"
        />
        <div
          class="mediaTitle"
        >
          <span>
            Media 1
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="mediaItem"
      >
        <img
          alt="Media 2"
          class="thumbnailImage"
          src="http://lorempixel.com/25/25"
        />
        <div
          class="mediaTitle"
        >
          <span>
            Media 2
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="mediaItem"
      >
        <img
          alt="Media 3"
          class="thumbnailImage"
          src="http://lorempixel.com/25/25"
        />
        <div
          class="mediaTitle"
        >
          <span>
            Media 3
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MultiMediaSelection field with display options 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="mediaItem"
      >
        <img
          alt="Media 1"
          class="thumbnailImage"
          src="http://lorempixel.com/25/25"
        />
        <div
          class="mediaTitle"
        >
          <span>
            Media 1
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MultiMediaSelection field without thumbnails with MimeTypeIndicator 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="mediaItem"
      >
        <div
          class="mimeTypeIndicator"
          style="color: rgb(255, 255, 255); font-size: 16px; background-color: rgb(88, 88, 88); width: 25px; height: 25px;"
        >
          <span
            class="fa-file-code-o"
          />
        </div>
        <div
          class="mediaTitle"
        >
          <span>
            Media 1
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="mediaItem"
      >
        <div
          class="mimeTypeIndicator"
          style="color: rgb(255, 255, 255); font-size: 16px; background-color: rgb(187, 8, 6); width: 25px; height: 25px;"
        >
          <span
            class="fa-file-pdf-o"
          />
        </div>
        <div
          class="mediaTitle"
        >
          <span>
            Media 2
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="mediaItem"
      >
        <div
          class="mimeTypeIndicator"
          style="color: rgb(255, 255, 255); font-size: 16px; background-color: rgb(0, 114, 58); width: 25px; height: 25px;"
        >
          <span
            class="fa-file-excel-o"
          />
        </div>
        <div
          class="mediaTitle"
        >
          <span>
            Media 3
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
